<resources>
    <string name="app_name">AlphaFitness</string>
    <string name="title_activity_record_workout">RecordWorkoutActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="record_workout_title_text">Record Workout</string>
    <string name="record_workout_record_button_start_text">Start Workout</string>
    <string name="record_workout_record_button_end_text">End Workout</string>
    <string name="record_workout_distance_title_text">DISTANCE</string>
    <string name="record_workout_distance_amount_text">0</string>
    <string name="record_workout_distance_unit_text">KM</string>
    <string name="record_workout_duration_title_text">DURATION</string>
    <string name="record_workout_duration_amount_text">0</string>
    <string name="record_workout_duration_unit_text">Minutes</string>
    <string name="workout_detail_label_text">Workout Details</string>
    <string name="workout_detail_instant_speed_label_text">Speed</string>
    <string name="workout_detail_average_speed_label_text">Average</string>
    <string name="workout_detail_max_speed_label_text">Max</string>
    <string name="workout_detail_min_speed_label_text">Min</string>
    <string name="workout_detail_speed_number_text">0</string>
    <string name="workout_detail_speed_unit_text">m/s</string>
    <string name="title_activity_user_info">UserInfo</string>
    <string name="title_activity_maps">Map</string>
</resources>
