<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WorkoutDetailsFragment">

    <LinearLayout
    android:id="@+id/dataLayout"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal"
    android:weightSum="1"
    android:layout_gravity="center">

        <TextView
            android:id="@+id/workoutDetailsLabel"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="@string/workout_detail_label_text"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.15"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/workoutDetailsInstantSpeedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/workout_detail_instant_speed_label_text"
                />

            <TextView
                android:id="@+id/workoutDetailsInstantSpeedNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/workout_detail_speed_number_text"/>

            <TextView
                android:id="@+id/workoutDetailsInstantUnitsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/workout_detail_speed_unit_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.15"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/workoutDetailsAverageSpeedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/workout_detail_average_speed_label_text"
                />

            <TextView
                android:id="@+id/workoutDetailsAverageSpeedNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/workout_detail_speed_number_text"/>

            <TextView
                android:id="@+id/workoutDetailsAverageUnitsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/workout_detail_speed_unit_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.15"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/workoutDetailsMaxSpeedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/workout_detail_max_speed_label_text"
                />

            <TextView
                android:id="@+id/workoutDetailsMaxSpeedNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/workout_detail_speed_number_text"/>

            <TextView
                android:id="@+id/workoutDetailsMaxUnitsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/workout_detail_speed_unit_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.15"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/workoutDetailsMinSpeedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/workout_detail_min_speed_label_text"
                />

            <TextView
                android:id="@+id/workoutDetailsMinSpeedNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/workout_detail_speed_number_text"/>

            <TextView
                android:id="@+id/workoutDetailsMinUnitsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/workout_detail_speed_unit_text"/>

        </LinearLayout>

    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_below="@+id/dataLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>